Fix for broken breadcrumbs wrapping

--- a/src/userinterface/MimotoCMS/components/interface/Header/_Header-breadcrumbs.scss
+++ b/src/userinterface/MimotoCMS/components/interface/Header/_Header-breadcrumbs.scss
@@ -11,6 +11,8 @@
 }
 
     #{$pr-interface}_Header-breadcrumbs-list-item {
+        display: inline-block;
+        white-space: nowrap;
         color: $dusty-gray;
 
         &:hover {
